--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.5.4/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.5.4/react-dom.js"></script>
     <title>React Test Page</title>
 </head>
 <body>
     <div id="app"></div>
-    <script type="text/babel" src="js/intro.jsx"></script>
+    <script src="js/bundle.js"></script>
 </body>
 </html>
